--- a/parametric-static/404.html
+++ b/parametric-static/404.html
@@ -6,19 +6,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>404 | Not Found | My ASD Site</title>
+  <title>404 | Not Found | Vape House</title>
   <meta name="description" content="Premium My ASD Site | quality, reliability, trust.">
   <meta name="author" content="Maestro">
 <!-- Open Graph -->
-  <meta property="og:title" content="404 | Not Found | My ASD Site">
+  <meta property="og:title" content="404 | Not Found | Vape House">
   <meta property="og:description" content="Premium My ASD Site | quality, reliability, trust.">
-<meta property="og:image" content="https://maestro-uchiha.github.io/my-new-asd-site/assets/img/og.jpeg">
+<meta property="og:image" content="https://vapehouse.helioho.st/assets/img/og.jpeg">
   <meta property="og:type" content="website">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="icon" href="/my-new-asd-site/assets/favicon.ico">
+  <link rel="icon" href="/assets/favicon.ico">
 
   <!-- Early theme boot (prevents flash) -->
   <script>
@@ -34,13 +34,13 @@
     })();
   </script>
 
-  <link rel="stylesheet" href="/my-new-asd-site/assets/css/style.css">
-<link rel="alternate" type="application/rss+xml"  title="My ASD Site RSS"  href="/my-new-asd-site/feed.xml">
-  <link rel="alternate" type="application/atom+xml" title="My ASD Site Atom" href="/my-new-asd-site/atom.xml">
+  <link rel="stylesheet" href="/assets/css/style.css">
+<link rel="alternate" type="application/rss+xml"  title="Vape House RSS"  href="/feed.xml">
+  <link rel="alternate" type="application/atom+xml" title="Vape House Atom" href="/atom.xml">
 </head>
 <body>
   <header>
-    <h1><a href="/my-new-asd-site/index.html">My ASD Site</a></h1>
+    <h1><a href="/index.html">Vape House</a></h1>
 
     <!-- Mobile toggle -->
     <button id="navToggle" class="nav-toggle"
@@ -50,34 +50,34 @@
 
     <nav id="site-nav">
       <ul>
-        <li><a href="/my-new-asd-site/index.html">Home</a></li>
-        <li><a href="/my-new-asd-site/blog/">Blog</a></li>
-        <li><a href="/my-new-asd-site/search.html">Search</a></li>
-        <li><a href="/my-new-asd-site/about.html">About</a></li>
-        <li><a href="/my-new-asd-site/contact.html">Contact</a></li>
-        <li><a href="/my-new-asd-site/legal/privacy.html">Privacy</a></li>
-        <li><a href="/my-new-asd-site/legal/terms.html">Terms</a></li>
-        <li><a href="/my-new-asd-site/sitemap.html">Sitemap</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/blog/">Blog</a></li>
+        <li><a href="/search.html">Search</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="/legal/privacy.html">Privacy</a></li>
+        <li><a href="/legal/terms.html">Terms</a></li>
+        <li><a href="/sitemap.html">Sitemap</a></li>
       </ul>
     </nav>
   </header>
 
   <!-- KEEP CONTENT ON ONE LINE TO AVOID WHITESPACE GROWTH -->
   <main><h1>404 | Not Found</h1>
-    <p>That page doesn't exist. <a href="/my-new-asd-site/index.html">Return home</a>.</p></main>
+    <p>That page doesn't exist. <a href="/index.html">Return home</a>.</p></main>
 
   <footer>
     <p>
-      <a href="/my-new-asd-site/index.html">Home</a> |
-      <a href="/my-new-asd-site/blog/">Blog</a> |
-      <a href="/my-new-asd-site/search.html">Search</a> |
-      <a href="/my-new-asd-site/about.html">About</a> |
-      <a href="/my-new-asd-site/contact.html">Contact</a> |
-      <a href="/my-new-asd-site/legal/privacy.html">Privacy</a> |
-      <a href="/my-new-asd-site/legal/terms.html">Terms</a> |
-      <a href="/my-new-asd-site/sitemap.html">Sitemap</a>
+      <a href="/index.html">Home</a> |
+      <a href="/blog/">Blog</a> |
+      <a href="/search.html">Search</a> |
+      <a href="/about.html">About</a> |
+      <a href="/contact.html">Contact</a> |
+      <a href="/legal/privacy.html">Privacy</a> |
+      <a href="/legal/terms.html">Terms</a> |
+      <a href="/sitemap.html">Sitemap</a>
     </p>
-    <p>&copy; 2025 My ASD Site. All rights reserved.</p>
+    <p>&copy; 2025 Vape House. All rights reserved.</p>
   </footer>
 
   <!-- Single rectangular theme toggle -->
